# study-physical-model

./: .gitignore  README.md
phys/: Cargo.toml
phys/examples/: test.rs
phys/src/: finite_difference_method.rs
physpy/: Cargo.toml  setup.py
physpy/examples/: test.ipynb
physpy/physpy/: __init__.py
physpy/src/: lib.rs
