[package]
name = "physpy"
version = "0.1.0"
authors = ["masashi yoshikawa <earnest.marshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.0.2"
pyo3 = "0.11.1"
numpy = "0.11.0"
ndarray = "0.13"

[lib]
name = "physpy"
crate-type = ["cdylib"]
